[gd_scene load_steps=49 format=2]

[ext_resource path="res://content/caves/halloweencave/HalloweenSkeletonCave.gd" type="Script" id=1]
[ext_resource path="res://content/map/Parallaxer.gd" type="Script" id=2]
[ext_resource path="res://content/caves/halloweencave/skeleton_sheet.png" type="Texture" id=3]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=4]
[ext_resource path="res://content/caves/halloweencave/focus.png" type="Texture" id=5]
[ext_resource path="res://content/caves/halloweencave/ScaryCaveAmb.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/caves/halloweencave/halloweencave_sheet.png" type="Texture" id=8]
[ext_resource path="res://content/caves/halloweencave/ScaryCaveActivation.wav" type="AudioStream" id=9]
[ext_resource path="res://content/shared/explosions/explosions-Sheet_rough.png" type="Texture" id=10]
[ext_resource path="res://content/caves/halloweencave/mask_blur.png" type="Texture" id=11]
[ext_resource path="res://content/caves/halloweencave/spookyguys.png" type="Texture" id=12]
[ext_resource path="res://content/caves/halloweencave/ScaryCaveDiscovery.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 13, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 26, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 39, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 52, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 65, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 91, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 104, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 117, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 130, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 143, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 169, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 182, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 195, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 221, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 234, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 247, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 260, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 273, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 286, 0, 13, 27 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 299, 0, 13, 27 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 0, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 251, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 10 )
region = Rect2( 502, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 10 )
region = Rect2( 753, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 10 )
region = Rect2( 1004, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 10 )
region = Rect2( 1255, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 10 )
region = Rect2( 1506, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 10 )
region = Rect2( 1757, 232, 251, 232 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 10 )
region = Rect2( 1757, 0, 251, 232 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="HalloweenSkeletonCave" type="Node2D" groups=["saveable", "unstyled"]]
z_index = -40
script = ExtResource( 1 )
biome = "yellow"

[node name="Sprites" type="Control" parent="."]
margin_right = 94.0
margin_bottom = 48.0
rect_clip_content = true
script = ExtResource( 2 )
start_offset = 0.2
scaling = 0.8

[node name="Sprite" type="Sprite" parent="Sprites"]
position = Vector2( 46, 24 )
texture = ExtResource( 8 )
hframes = 5

[node name="Sprite2" type="Sprite" parent="Sprites"]
position = Vector2( 47, 24 )
texture = ExtResource( 8 )
hframes = 5
frame = 1

[node name="Sprite3" type="Sprite" parent="Sprites"]
position = Vector2( 47, 24 )
texture = ExtResource( 8 )
hframes = 5
frame = 2

[node name="Sprite4" type="Sprite" parent="Sprites"]
position = Vector2( 47, 24 )
texture = ExtResource( 8 )
hframes = 5
frame = 3

[node name="Spookyguys" type="Sprite" parent="Sprites/Sprite4"]
position = Vector2( 3, 13 )
texture = ExtResource( 12 )

[node name="Sprite5" type="Sprite" parent="Sprites"]
position = Vector2( 47, 24 )
texture = ExtResource( 8 )
hframes = 5
frame = 4

[node name="FocusMarker" type="Sprite" parent="Sprites/Sprite5"]
position = Vector2( 1.27778, 4 )
texture = ExtResource( 5 )

[node name="Skeleton" type="AnimatedSprite" parent="Sprites/Sprite5"]
position = Vector2( 1.5, 9 )
frames = SubResource( 25 )

[node name="ActivatedSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 9 )
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0

[node name="Usable" parent="." instance=ExtResource( 4 )]
position = Vector2( 47, 28 )
visibleOnFocus = NodePath("../Sprites/Sprite5/FocusMarker")

[node name="AmbSound" parent="Usable" instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = -4.0
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 120.0
minAudibleDistance = 36.0
fadeInTime = 1.5
fadeOutTime = 3.0
loop = true

[node name="DiscoverySound" parent="Usable" instance=ExtResource( 7 )]
stream = ExtResource( 13 )
bus = "Mine"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 120.0
minAudibleDistance = 36.0
fadeInTime = 0.3
fadeOutTime = 3.0

[node name="Tween" type="Tween" parent="."]

[node name="AlphaMap" type="Sprite" parent="."]
visible = false
position = Vector2( 45, 24 )
texture = ExtResource( 11 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 75, 69 )
scale = Vector2( 0.5, 0.7 )
z_index = 500
frames = SubResource( 35 )
flip_v = true

[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="frame_changed" from="Explosion" to="." method="_on_Explosion_frame_changed"]
